# speed_monitoring

./: CMakeLists.txt  README.md  client1.cpp  client2.cpp  main.cpp  server.cpp  vsomeip.json  vsomeip_client1.json  vsomeip_client2.json
include/: client1.hpp  client2.hpp  server.hpp
src/: client1.cpp  client2.cpp  server.cpp
